--- a/test/index.html
+++ b/test/index.html
@@ -10,6 +10,8 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
+    <link href="../bower_components/cal-heatmap/cal-heatmap.css" rel="stylesheet">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -22,20 +24,24 @@
 
     <h1>Github Calendar Test</h1>
 
-    <div id="github-cal"></div>
-
+    <div id="cal-heatmap"></div>
+    
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
 
+    <script src="../bower_components/moment/moment.js"></script>
+
     <script src="../bower_components/d3/d3.min.js"></script>
+
+    <script src="../bower_components/cal-heatmap/cal-heatmap.min.js"></script>
 
     <script src="../github-cal.js"></script>
 
     <script>
         $(document).ready(function(){
-            githubCal.init('#github-cal');
+            githubCal.init('cal-heatmap');
         });
     </script>
 
