--- a/test/index.html
+++ b/test/index.html
@@ -25,7 +25,7 @@
     <h1>Github Calendar Test</h1>
 
     <div id="cal-heatmap"></div>
-    
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -41,7 +41,7 @@
 
     <script>
         $(document).ready(function(){
-            githubCal.init('cal-heatmap');
+            githubCal.init('#cal-heatmap');
         });
     </script>
 
